# omnishock

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  appveyor.yml
ci/: before_deploy.ps1  before_deploy.sh  install.ps1  install.sh  script.sh
ci/docker/armv7-unknown-linux-gnueabihf/: Dockerfile
ci/docker/x86_64-unknown-linux-gnu/: Dockerfile
src/: main.rs  sdl_manager.rs
