[package]
name = "omnishock"
version = "0.0.6"
description = "Something to do with game controllers!"
authors = [ "Jessica Stokes <hello@jessicastokes.net>" ]
repository = "https://github.com/ticky/omnishock.git"
homepage = "https://github.com/ticky/omnishock"
license = "GPL-3.0-or-later"
readme = "README.md"

[features]
default = []
flamegraph-profiling = ["flame"]

[dependencies]
clap = "2.30.0"
flame = { version = "0.2.0", optional = true }
game_time = "0.2.0"
hex-view = "0.1.2"
num = "0.1.42"
sdl2 = "0.31.0"
serial = "0.4"
spin_sleep = "0.3.4"

[target.x86_64-unknown-linux-gnu]
image = "sdl2-x86_64-unknown-linux-gnu"

[target.armv7-unknown-linux-gnueabihf]
image = "sdl2-armv7-unknown-linux-gnueabihf"
