[package]
name = "omnishock"
version = "0.0.9"
description = "Something to do with game controllers!"
authors = [ "Jessica Stokes <hello@jessicastokes.net>" ]
repository = "https://github.com/ticky/omnishock.git"
homepage = "https://github.com/ticky/omnishock"
license = "GPL-3.0-or-later"
readme = "README.md"

[features]
default = ["sdl2/use-pkgconfig"]
flamegraph-profiling = ["flame"]

[dependencies]
bitflags = "1.0.4"
clap = { version = "3.0", features = ["derive"] }
flame = { version = "0.2.2", optional = true }
game_time = "0.2.0"
hex-view = "0.1.2"
num = "0.2.0"
sdl2 = "0.34.3"
serialport = "3.2.0"
spin_sleep = "0.3.7"

[dev-dependencies]
mockstream = "0.0.3"

[target.x86_64-unknown-linux-gnu]
image = "sdl2-x86_64-unknown-linux-gnu"

[target.armv7-unknown-linux-gnueabihf]
image = "sdl2-armv7-unknown-linux-gnueabihf"
